--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,13 @@ jobs:
         if: matrix.TARGET.OS == 'ubuntu-latest'
         run: |
           sudo apt-get update
-          sudo apt-get install -y build-essential bison file gcc-multilib gperf
+          sudo apt-get install -y build-essential bison file gperf
+          echo "deb http://old-releases.ubuntu.com/ubuntu zesty main" | sudo tee /etc/apt/sources.list.d/zesty.list
+          sudo apt-add-repository -r universe
+          sudo apt update
+          sudo apt install -y gcc-6 gcc-6-multilib
+          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 1
+
 
       - name: Configure
         shell: bash
