--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-          make CFLAGS="${{ matrix.TARGET.CFLAGS }}"
+          make gcc CFLAGS="${{ matrix.TARGET.CFLAGS }}"
 
       - name: Test for file
         shell: bash
