--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
             }
           - {
               OS: 'macos-latest',
-              CFLAGS: '-std=gnu89 -Wno-return-type -Wno-error -Wno-implicit-function-declaration',
+              CFLAGS: '-std=gnu89 -Wno-return-type -Wno-error -Wno-implicit-function-declaration -arch x86_64 -arch arm64',
               HOST: 'i386-apple-darwin'
             }
 
@@ -39,6 +39,11 @@ jobs:
         shell: bash
         run: |
           ./configure --target=mips-nintendo-nu64 --prefix=/opt/cross --with-gnu-as --disable-gprof --disable-gdb --disable-werror --host=${{ matrix.TARGET.HOST }} --build=${{ matrix.TARGET.HOST }}
+      - name: Stub arch64 (Apple Silicon) host
+        shell: bash
+        if: matrix.TARGET.OS == 'macos-latest'
+        run: |
+          echo '#include "config/i386/xm-darwin.h"' >> config.h
       - name: Make
         continue-on-error: true
         shell: bash
@@ -56,7 +61,6 @@ jobs:
         with:
           name: cc1-${{ matrix.TARGET.OS }}
           path: |
-            as
             cpp
             cc1
             xgcc
