--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,9 +45,7 @@ jobs:
         continue-on-error: true
         shell: bash
         run: |
-          make cpp CFLAGS="${{ matrix.TARGET.CFLAGS }}"
-          make cc1 CFLAGS="${{ matrix.TARGET.CFLAGS }}"
-          make xgcc CFLAGS="${{ matrix.TARGET.CFLAGS }}"
+          make cpp cc1 xgcc cc1plus g++ CFLAGS="${{ matrix.TARGET.CFLAGS }}"
       - name: Test for file
         shell: bash
         run: |
