--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
       - name: Add cpp to release archive
         shell: bash
         run: |
-          tar -rzf ${{ matrix.TARGET.ARCHIVE_NAME }} cpp
+          tar -uzf ${{ matrix.TARGET.ARCHIVE_NAME }} cpp
       - name: Upload archive
         uses: actions/upload-artifact@v2
         with:
