--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Compile cc1
+name: Compile gcc
 
 on: [push]
 
@@ -22,7 +22,7 @@ jobs:
               ARCHIVE_NAME: 'mac.tar'
             }
 
-    name: Building cc1 for ${{ matrix.TARGET.OS }}
+    name: Building gcc for ${{ matrix.TARGET.OS }}
     steps:
       - uses: actions/checkout@v2
 
@@ -77,7 +77,7 @@ jobs:
       - name: Upload archive
         uses: actions/upload-artifact@v2
         with:
-          name: gcc-2.7.1-${{ matrix.TARGET.OS }}
+          name: gcc-2.8.1-${{ matrix.TARGET.OS }}
           path: |
             ${{ matrix.TARGET.ARCHIVE_NAME }}.gz
       - name: Update release
