--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Start release archive
         shell: bash
         run: |
-          cp xgcc gcc
-          tar -cf ${{ matrix.TARGET.ARCHIVE_NAME }} cc1 gcc cc1plus g++
+          cp xgcc gcc cpp
+          tar -cf ${{ matrix.TARGET.ARCHIVE_NAME }} cc1 gcc cc1plus g++ cpp
       - name: Upload archive
         uses: actions/upload-artifact@v2
         with:
