--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,25 @@ jobs:
         shell: bash
         run: |
           cp xgcc gcc
-          tar -czf ${{ matrix.TARGET.ARCHIVE_NAME }} cc1 gcc cc1plus g++ cpp
+          tar -cf ${{ matrix.TARGET.ARCHIVE_NAME }} cc1 gcc cc1plus g++
+      - name: Clean
+        shell: bash
+        run: |
+          make clean
+      - name: Configure for mips
+        shell: bash
+        run: |
+          ./configure --target=mips --prefix=/opt/cross --with-gnu-as --disable-gprof --disable-gdb --disable-werror --host=${{ matrix.TARGET.HOST }} --build=${{ matrix.TARGET.HOST }}
+      - name: Make cpp
+        continue-on-error: true
+        shell: bash
+        run: |
+          make cpp CFLAGS="${{ matrix.TARGET.CFLAGS }}"
+      - name: Add cpp to release archive
+        shell: bash
+        run: |
+          tar -uf ${{ matrix.TARGET.ARCHIVE_NAME }} cpp
+          gzip -9 ${{ matrix.TARGET.ARCHIVE_NAME }}
       - name: Upload archive
         uses: actions/upload-artifact@v2
         with:
