--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
         TARGET:
           - {
               OS: 'ubuntu-latest',
-              CFLAGS: '-std=gnu89 -m32 -static -O3',
+              CFLAGS: '-std=gnu89 -m32 -O3',
               HOST: 'i386-pc-linux',
               ARCHIVE_NAME: 'linux.tar.gz'
             }
